--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -28,3 +28,22 @@ jobs:
   cpuRequirement: 250m
   memoryRequirement: 128m
   timeout: 3600
+- name: Sync
+  steps:
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: Sync
+    image: alpine/git:v2.30.2
+    commands:
+    - git push -f https://oauth2:@secret:githubAccessToken@@@github.com/LainNetWork/hanaya
+      HEAD:master
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  retryCondition: never
+  maxRetries: 3
+  retryDelay: 30
+  cpuRequirement: 250m
+  memoryRequirement: 128m
+  timeout: 3600
