--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -22,8 +22,6 @@ jobs:
       -v /home/ubuntu/hana/imageCache:/app/imageCache lain/@project_name@
     - echo "end build @project_name@ image"
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
-  triggers:
-  - !BranchUpdateTrigger {}
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
@@ -43,6 +41,9 @@ jobs:
     - git push -f https://oauth2:@secret:githubAccessToken@@@github.com/LainNetWork/hanaya
       HEAD:master
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  triggers:
+  - !BranchUpdateTrigger
+    branches: master
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
